@@ -1,0 +1,3 @@
+MD5 1efa55000fb3bdb2eab3b5bb45b133f6 dvthread-0.5.0.tar.gz 419264
+RMD160 71e5c1747985fd2526c38897e3efee907fca4f99 dvthread-0.5.0.tar.gz 419264
+SHA256 1531140896a84b291ab10c67ee9a8da0bfdb124de838e5893c1ac69e00e72b86 dvthread-0.5.0.tar.gz 419264
